<resources>
    <!-- ANDROID, APP -->
    <string name="app_name">BrainManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="Global_menu">Menu</string>
    <string name="Global_done">DONE</string>
    <string name="Global_confirm">Confirm</string>
    <string name="Global_negative">Cancel</string>
    <string name="Global_added">Keyword added.</string>
    <string name="Global_updated">Keyword changed.</string>
    <string name="Global_canceled">Canceled</string>
    <string name="Global_OK">OK</string>
    <string name="Global_Day">day</string>
    <string name="Global_Hour">hour</string>
    <string name="Global_Minute">minute</string>
    <string name="Global_plural">s</string>
    <string name="Global_errorOccurred">Error occurred</string>
    <string name="Global_exceptionESKeyword">A keyword with blank names can not be registered</string>
    <string name="Global_exceptionESCategory">A Category with blank names can not be registered</string>
    <string name="Global_exceptionESDescription">Blank description can not be registered</string>

    <string name="SharedPreferencesName" translatable="false">BrainManagerSettings</string>
    <string name="SharedPreferences_learningType" translatable="false">Learning Type</string>
    <string name="SharedPreferences_nightMode" translatable="false">Night Mode</string>
    <string name="SharedPreferences_deleteOriginalImage" translatable="false">Delete Original Image</string>
    <string name="SharedPreferences_firstStart" translatable="false">First Start</string>

    <string name="Label_review">Review</string>
    <string name="Label_statistics">Statistics</string>
    <string name="Label_relation">Set Relations</string>
    <string name="Label_settings">Settings</string>

    <string name="Category_all">All</string>

    <string name="AlertDialog_button_yes">Yes</string>
    <string name="AlertDialog_button_no">No</string>

    <string name="AlertDialog_askReallyCancel">Are you sure you want to cancel?</string>

    <string name="PermissionManager_permissionText_readExternalStorage">Read external storage</string>
    <string name="PermissionManager_permissionText_writeExternalStorage">Write external storage</string>
    <string name="PermissionManager_permissionText_receiveBootCompleted">Receive boot completed</string>
    <string name="PermissionManager_permissionText_camera">Camera</string>
    <string name="PermissionManager_permissionText_wakeLock">Wake up device</string>
    <string name="PermissionManager_accessNetworkState">Access network state</string>
    <string name="PermissionManager_permissionText_internet">Internet</string>

    <string name="MainActivity_search">Search</string>
    <string name="MainActivity_addCategory">New Category</string>
    <string name="MainActivity_review">Review</string>
    <string name="MainActivity_expired_review">There is a review to do!!!</string>
    <string name="MainActivity_statistics">Statistics</string>
    <string name="MainActivity_setRelations">Set relations</string>
    <string name="MainActivity_settings">Settings</string>
    <string name="MainActivity_unableToDelete">Unable to delete</string>
    <string name="MainActivity_unableToEdit">Unable to edit</string>

    <string name="MainActivity_Action_deleteCategories">Delete selected category</string>
    <string name="MainActivity_Action_editCategories">Edit selected category</string>

    <string name="MainActivity_ContextMenu_modify">Modify</string>
    <string name="MainActivity_ContextMenu_delete">Delete</string>

    <string name="MainActivity_FabItem_addCategories">Add Categories</string>
    <string name="MainActivity_FabItem_addKeywords">Add Keywords</string>

    <string name="CategoryActivity_title">Update</string>
    <string name="CategoryActivity_uncategorize">Uncategorize</string>
    <string name="CategoryActivity_keywords">Keywords in the category</string>

    <string name="KeywordActivity_name">Name</string>
    <string name="KeywordActivity_nameHint">Please enter a name.</string>
    <string name="KeywordActivity_category">Category</string>
    <string name="KeywordActivity_descriptions">Descriptions</string>
    <string name="KeywordActivity_none">None</string>
    <string name="KeywordActivity_addImage">Add image</string>
    <string name="KeywordActivity_updateImage">Change image</string>
    <string name="KeywordActivity_titleRegister">Add a keyword</string>
    <string name="KeywordActivity_titleView">View</string>
    <string name="KeywordActivity_titleUpdate">Update</string>
    <string name="KeywordActivity_addDescription">Add</string>
    <string name="KeywordActivity_updateDescription">Update</string>
    <string name="KeywordActivity_deleteDescription">Delete</string>

    <string name="ReviewActivity_showAnswerButton">Show answer</string>
    <string name="ReviewActivity_nextButton">Next</string>
    <string name="ReviewActivity_imageViewKeywordDescription">TODO</string>
    <string name="ReviewActivity_noKeyword">There\'s no keywords</string>
    <string name="ReviewActivity_lastKeyword">Last Keyword of List</string>
    <string name="ReviewActivity_correct">Correct!!!</string>
    <string name="ReviewActivity_wrong">Wrong&#8230; That\'s OK</string>
    <string name="ReviewActivity_remainReview">
        Expired review remains.\nIf you cancel, you will be notified after 20 minutes.</string>

    <string name="RelationActivity_error"> errors occurred</string>
    <string name="RelationActivity_relationAdd"> relationship have been added.</string>

    <string name="AlarmReceiver_error">Alarm setting: Error Occur</string>
    <string name="AlarmReceiver_date_toast">Next Review Alarm : %1$slater.</string>
    <string name="AlarmReceiver_cancel">If you complete expired review, Alarm\'s not showing~\n</string>

    <string name="Notification_title">Brain Manager</string>
    <string name="Notification_text">&#160;need a review.</string>
    <string name="Notification_keyword">&#160;keyword</string>

    <string name="SettingsActivity_forgettingCurve">Forgetting curve</string>
    <string name="SettingsActivity_reviewType">Review type</string>
    <string name="SettingsActivity_push">Push notification</string>
    <string name="SettingsActivity_lockScreen">Lock screen</string>
    <string name="SettingsActivity_alarm">Alarm</string>
    <string name="SettingsActivity_setNightMode">Set night mode</string>
    <string name="SettingsActivity_nightModeDescription">sound off when 11:00pm~08:00am</string>
    <string name="SettingsActivity_setDeleteOriginalMode">Delete original image</string>
    <string name="SettingsActivity_deleteOriginalModeDescription">When registering images, delete the original image</string>
    <string name="SettingsActivity_appInfo">App Info</string>
    <string name="SettingsActivity_privacyPolicy"> Personal Information Processing Policy \n- Provides information about the personal information life cycle such as the type, utilization, sharing, and destruction of user\'s personal information modified by this application. \n</string>
    <string name="SettingsActivity_privacyPolicyURL" translatable="false">https://neomindstd.github.io/app_docs/privacy_policies/BrainManager</string>
    <string name="SettingsActivity_openSourceLibraries"> API License \n- Displays the license information of the API used in this application. \n</string>
    <string name="SettingsActivity_openSourceLibrariesURL" translatable="false">https://neomindstd.github.io/app_docs/opensrc_libraries/BrainManager</string>

    <string name="StatisticsActivity_chooseOne">Choose One</string>
    <string name="StatisticsActivity_recent15">Recent 15days</string>
    <string name="StatisticsActivity_recent30">Recent 30days</string>
    <string name="StatisticsActivity_label" translatable="false">goal</string>
    <string name="StatisticsActivity_percentCorrect">Percent correct</string>
    <string name="StatisticsActivity_problemSolvingSpeed">Problem solving speed</string>
    <string name="StatisticsActivity_setTargetCorrectAnswerRate">Set target correct answer rate</string>
    <string name="StatisticsActivity_setTargetTime">Set target time</string>

    <string name="TutorialActivity_skip">Skip</string>
    <string name="TutorialActivity_done">OK</string>
</resources>
