<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_review"
            android:icon="@drawable/ic_main_study"
            android:title="@string/MainActivity_review" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_chart"
            android:title="@string/MainActivity_statistics" />
        <item
            android:id="@+id/nav_relation"
            android:icon="@drawable/ic_main_relation"
            android:title="@string/MainActivity_setRelations" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_main_settings"
            android:title="@string/MainActivity_settings" />
    </group>

</menu>
