<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusableInTouchMode="true"
    android:id="@+id/layoutKeywordcontentsFields"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:showIn="@layout/activity_keyword">

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/keyword_photoView"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:src="@android:color/darker_gray"
        app:srcCompat="@android:color/darker_gray"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/keyword_button_addImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        style="@style/Widget.MaterialComponents.Button"
        android:textColor="@color/WHITE"
        app:backgroundTint="@color/colorPrimaryLight"
        android:textSize="16dp"
        android:text="@string/KeywordActivity_addImage"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/keyword_editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:hint="@string/KeywordActivity_nameHint"
        android:textSize="16dp"
        android:focusable="true"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAlwaysShown="true"
        app:met_floatingLabelText="@string/KeywordActivity_name"
        app:met_maxCharacters="20"
        app:met_singleLineEllipsis="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:text="@string/KeywordActivity_category"
        android:textColor="@color/colorPrimary"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/keyword_spinner_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>