<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:showIn="@layout/app_bar_category">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/category_editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:hint="@string/KeywordActivity_nameHint"
        android:textSize="16dp"
        android:focusable="true"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAlwaysShown="true"
        app:met_floatingLabelText="@string/KeywordActivity_name"
        app:met_maxCharacters="20"
        app:met_singleLineEllipsis="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="14dp"
        android:text="@string/CategoryActivity_keywords"
        android:textColor="@color/colorPrimary"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/category_recyclerView_keyword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>